Fix background overflow on placement boxes

--- a/warehouse/ui/src/main/resources/ui/CSS/inputStyle.css
+++ b/warehouse/ui/src/main/resources/ui/CSS/inputStyle.css
@@ -37,6 +37,7 @@ TextField:disabled {
   -fx-background-color: #fff; 
   -fx-border-color: #aaa; 
   -fx-border-radius: 8;
+  -fx-background-radius: 8;
 }
 
 .placementTextField{
